add restricted topic detection
